Prevent container overflow in recipe view if screen becomes narrow

--- a/recipe-app-front-end/src/app/globals.css
+++ b/recipe-app-front-end/src/app/globals.css
@@ -31,14 +31,14 @@ html {
   /* border: 2px solid red; */
   display: flex;
   flex-direction: column;
-  width: 90vw;
+  width: 95vw;
   min-width: 380px;
   height: 95vh;
   gap: 0.5rem;
 }
 
 .page-title {
-  font-size: 1.8em;
+  font-size: 1.5em;
   margin: 1rem 0 0 1rem;
   width: 76%;
   color: var(--primary-color);
@@ -71,6 +71,23 @@ html {
   overflow: hidden;
 }
 
+.column-title {
+  border-bottom: 2px solid var(--primary-color);
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+
+.column-title.row {
+  height: 30px;
+  margin-top: 0.25rem;
+  border-bottom: 2px solid var(--primary-color);
+}
+
+.column-title .delete-column{
+  text-align: center;
+  font-size: 1rem;
+}
+
 .name-column {
   /* border: 1px solid red; */
   width: calc(47% - 0.5rem);
@@ -98,19 +115,7 @@ html {
 
 .delete-column {
   /* border: 1px solid grey; */
-  width: calc(6% - 0.5rem);
-}
-
-.edit-page .name-column {
-  width: calc(47% - 0.5rem);
-}
-
-.edit-page .amount-column {
-  width: calc(23% - 0.5rem)
-}
-
-.edit-page .type-column {
-  width: calc(23% - 0.5rem);
+  width: calc(10% - 0.5rem);
 }
 
 /* Recipe List Page */
@@ -131,27 +136,15 @@ html {
   overflow-y: auto;
 }
 
-.column-title {
-  border-bottom: 2px solid var(--primary-color);
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-.column-title.row {
-  height: 30px;
-  margin-top: 0.25rem;
-  border-bottom: 2px solid var(--primary-color);
-}
-
 /* RecipeView */
 
 .recipe-card {
   border: 2px solid var(--primary-color);
   border-radius: 5px;
-  padding: 1rem;
+  padding: 0.5rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   font-size: 1rem;
 }
 
@@ -161,7 +154,7 @@ html {
 }
 
 .big-details {
-  width: 70%;
+  width: 75%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -176,7 +169,7 @@ html {
 }
 
 .small-details {
-  width: 30%;
+  width: 25%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -207,6 +200,8 @@ html {
   padding: 0.5rem;
 }
 
+/* Edit Page */
+
 .edit-page input,
 .edit-page textarea,
 .edit-page select {
@@ -217,6 +212,10 @@ html {
   width: 100%;
 }
 
+.edit-page .page-title{
+  width: 50%;
+}
+
 .edit-page .row input,
 .edit-page .row select{
   height: 35px;
@@ -225,6 +224,18 @@ html {
 input.page-title {
   border: 2px solid var(--secondary-color);
   margin-bottom: 0.5rem;
+}
+
+.edit-page .name-column {
+  width: calc(47% - 0.5rem);
+}
+
+.edit-page .amount-column {
+  width: calc(21% - 0.5rem)
+}
+
+.edit-page .type-column {
+  width: calc(21% - 0.5rem);
 }
 
 .recipe-card input,
@@ -292,6 +303,10 @@ input[type="number"] {
     max-width: 1100px;
   }
 
+  .page-title{
+    font-size: 2rem;
+  }
+
   .column-title {
     font-size: 1rem;
   }
@@ -302,6 +317,7 @@ input[type="number"] {
 
   .recipe-card {
     font-size: 1.2rem;
+    padding: 1rem;
   }
 
   .big-details {
@@ -311,7 +327,8 @@ input[type="number"] {
 
   .small-details {
     width: 20%;
-    justify-content: space-evenly;
+    min-width: 10.5rem;
+    justify-content: space-between;
   }
 
   .small-details span {
